--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ layout: null
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -18,7 +18,7 @@ body {
   {% endif %}
 }
 p {
-  line-height: 2.5;
+  line-height: 1.5;
   margin: 30px 0;
 }
 h1,h2,h3,h4,h5,h6 {
