--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ layout: null
 
 body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  font-size: 18px;
+  font-size: 20px;
   color: #404040;
   position: relative;
   background-color: {{ site.page-col }};
@@ -20,6 +20,7 @@ body {
 p {
   line-height: 1.5;
   margin: 30px 0;
+  position: relative;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
