--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,9 +48,9 @@ layout: base
         </div>
       {% endif %}
 
-      {% if page.social-share %}
+      <!--{% if page.social-share %}
         {% include social-share.html %}
-      {% endif %}
+      {% endif %}-->
 
       <ul class="pager blog-pager">
         {% if page.previous.url %}
