--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   76
 
-  <link rel="shortcut icon" type="img/a-icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="img/a-icon.png" href="favicon.ico" />
   <meta name="author" content="{{ site.author.name }}" />
 
   {% if page.subtitle %}
