--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-  <link rel="shortcut icon" type="/img/a-icon.png" href="_includes/img/a-icon.png" />
+  <link rel="shortcut icon" href="/img/a-icon.png" type="image/png" />
   <meta name="author" content="{{ site.author.name }}" />
 
   {% if page.subtitle %}
