--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,12 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 800;
 }
 a {
-  color: {{ site.link-col }};
+  text-decoration: underline;
+  color: #404040;
 }
 a:hover,
 a:focus {
-  color: {{ site.hover-col }};
+  color: #0085a1;
 }
 blockquote {
   color: #808080;
