--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ layout: null
 /* --- General --- */
 
 body {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: 'Lora', 'Times New Roman', serif;
   font-size: 19px;
   color: #404040;
   position: relative;
