--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ layout: null
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  /*---font-family: 'Lora', 'Times New Roman', serif;---*/
+  font-family:'Merriweather';
   font-size: 19px;
   color: #404040;
   position: relative;
