--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ p {
   position: relative;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   font-weight: 800;
 }
 a {
@@ -63,7 +64,8 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   padding: 15px inherit;
 }
 
@@ -114,7 +116,8 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -298,7 +301,8 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   text-align: center;
   margin-bottom: 0;
 }
@@ -364,7 +368,8 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
 }
 .post-entry-container {
   display: inline-block;
@@ -401,7 +406,8 @@ footer .theme-by {
 /* --- Tags --- */
 
 .blog-tags {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   color: #999;
   font-size: 15px;
   margin-bottom: 30px;
@@ -494,7 +500,8 @@ footer .theme-by {
   font-size: 27px;
   line-height: 1.1;
   display: block;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -519,7 +526,8 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   right: 0;
   bottom: 0;
   display: none;
@@ -603,7 +611,8 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -772,7 +781,8 @@ td.gutter {
 }
 
 #full-tags-list {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family:'Merriweather';
+  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
 }
 
 #full-tags-list .tag-entry {
