--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,7 @@ layout: null
 /* --- General --- */
 
 body {
-  /*---font-family: 'Lora', 'Times New Roman', serif;---*/
-  font-family:'Merriweather';
+  font-family: 'Lora', 'Times New Roman', serif;
   font-size: 19px;
   color: #404040;
   position: relative;
@@ -24,8 +23,7 @@ p {
   position: relative;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
@@ -64,8 +62,7 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 15px inherit;
 }
 
@@ -116,8 +113,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -301,8 +297,7 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-align: center;
   margin-bottom: 0;
 }
@@ -368,8 +363,7 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .post-entry-container {
   display: inline-block;
@@ -406,8 +400,7 @@ footer .theme-by {
 /* --- Tags --- */
 
 .blog-tags {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #999;
   font-size: 15px;
   margin-bottom: 30px;
@@ -500,8 +493,7 @@ footer .theme-by {
   font-size: 27px;
   line-height: 1.1;
   display: block;
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -526,8 +518,7 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   right: 0;
   bottom: 0;
   display: none;
@@ -611,8 +602,7 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -781,8 +771,7 @@ td.gutter {
 }
 
 #full-tags-list {
-  font-family:'Merriweather';
-  /*---font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;---*/
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #full-tags-list .tag-entry {
