--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ img {
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
+  padding:10;
   text-decoration: none;
   font-weight: 800;
   color: #404040;
