--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,8 @@ img {
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
-  padding-right: 25px;
+  padding-right: 15px;
+  padding-left: 15px;
   text-decoration: none;
   font-weight: 800;
   color: #404040;
