--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ img {
 
 
 .navbar-custom .navbar-brand,
-.navbar-custom .nav li{
+.navbar-custom .nav{
   margin-right: 30px;
   margin-left: 30px;
 }
