changing the padding on navbar font

--- a/css/main.css
+++ b/css/main.css
@@ -114,10 +114,12 @@ img {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  padding-left:20px;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
   {% endif %}
+
 }
 
 .navbar-custom .nav li a {
